<resources>
    <string name="app_name">Прогноз погоды</string>
    <string name="short_title">Погода</string>
    <string name="version_info">7.0.1</string>
    <string name="year_start">2015-2019</string>
    <string name="today">Сегодня</string>
    <string name="dayTemp">День,°C </string>
    <string name="nightTemp">Ночь,°C </string>
    <string name="noData">Нет данных</string>
    <string name="weatherType">Погода</string>
    <string name="aboutHeader">О Программе</string>
    <string name="author">Стрелец Coder</string>
    <string name="authorURL">http://streletzcoder.ru/</string>
    <string name="donate">Поддержать автора</string>
    <string name="donateURL">http://streletzcoder.ru/about/donate/</string>
    <string name="infoProvider">Информация о погоде предоставлена сервисом OpenWeatherMap</string>
    <string name="infoProviderURL">http://openweathermap.org/</string>
    <string name="Ok">OK</string>
    <string name="version">Версия</string>
    <string name="dataUrl">http://api.openweathermap.org/data/2.5/forecast/daily?id=</string>
    <string name="key">\u0026lang=ru\u0026appid=58a23cd09f531e28b95628c8513c57c4</string>
    <string name="settingsHeader">Настройки</string>
    <string name="citySelectTitle">Выбор города</string>
    <string name="countrySelectTitle">Выбор страны</string>
    <string name="criticalError">Невозможно загрузить данные! Вероятно отсутствует доступ в Интернет.</string>
    <string name="appwidget_text">-------</string>
    <string name="add_widget">Add widget</string>
    <string name="week">Прогноз на неделю:</string>
    <!-- Параметры подключения к БД-->
    <string name="db_name">scweatherinfo.db</string>
</resources>
