<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WorkArea_Blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentDayTitle"
        style="@style/tbl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_toEndOf="@+id/todayTitleLabel"
        android:layout_toRightOf="@+id/todayTitleLabel"
        android:text="@string/noData"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/todayTitleLabel"
        style="@style/tbl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:text="@string/today"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentDayTitle"
        android:layout_marginTop="38dp"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/dayTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="left|top"
                android:layout_marginRight="10dp"
                android:linksClickable="false"
                android:text="@string/dayTemp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/nightTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dayTempText"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="10dp"
                android:text="@string/nightTemp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dayTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/dayTempText"
                android:layout_toRightOf="@+id/dayTempText"
                android:text="@string/noData"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/nightTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dayTemp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/dayTempText"
                android:layout_toRightOf="@+id/dayTempText"
                android:text="@string/noData"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/weatherText"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right|center_vertical"
                android:layout_toEndOf="@+id/dayTemp"
                android:layout_toRightOf="@+id/dayTemp"
                android:text="@string/noData"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <TextView
            android:id="@+id/weekTitle"
            style="@style/tbl_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/week"
            android:textSize="10pt" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/daysListRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <!--<android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:layout_editor_absoluteX="0dp" />
        </android.support.constraint.ConstraintLayout>-->
    </LinearLayout>


    <TextView
        android:id="@+id/cityTitle"
        style="@style/tbl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentDayTitle"
        android:text="@string/noData"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
